--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,10 @@ body {
   color: #4d39d1;
 }
 
+a  {
+  text-decoration: none;
+  color: #4d39d1;
+}
 
 p {
   font-size: 1em;
@@ -146,7 +150,10 @@ h4 {
 .hero,
 .work,
 .what-i-do,
-.call-to-action {
+.call-to-action,
+.about,
+.contact,
+.work-detail {
   display: flex;
   justify-content: center;
   align-items: center;
