--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ textarea {
    ========================================================================== */
 /* === General Styles === */
 html {
-  font-size: 18px;
+  font-size: 15px;
   
 }
 
@@ -170,6 +170,10 @@ h4 {
   font-weight: 300;
   color: #f9fafc;
   padding: 0.7em 1.7em;
+}
+
+img {
+  max-width: 100%;
 }
 
 /* === Header - Footer === */
@@ -259,10 +263,6 @@ article {
   max-width: 300px;
 }
 
-article img {
-  max-width: 100%;
-}
-
 .featured-work p {
   margin: 1.5em 0;
 }
@@ -287,6 +287,9 @@ span {
   border-radius: 50px;
   color: #f9fafc;
   margin: 0 10px;
+  box-shadow: 6px 9px 23px 0px rgba(117,138,180,0.2);
+    -webkit-box-shadow:  6px 9px 23px 0px rgba(117,138,180,0.2);
+    -moz-box-shadow:  6px 9px 23px 0px rgba(117,138,180,0.2); 
 }
 
 .call-to-action a {
@@ -298,6 +301,27 @@ span {
   padding-bottom: 1em;
 }
 
+/* === About === */
+.about .content-wrapper {
+  background-color: #ffffff;
+  border-radius: 50px;
+  padding: 40px 10px;
+  margin: 5px 0;
+  box-shadow: 6px 9px 23px 0px rgba(117,138,180,0.2);
+    -webkit-box-shadow:  6px 9px 23px 0px rgba(117,138,180,0.2);
+    -moz-box-shadow:  6px 9px 23px 0px rgba(117,138,180,0.2);          
+}
+
+.about p {
+  padding: 0 1em;
+}
+
+.about img {
+  border-radius: 30px;
+  max-width: 90%;
+  padding-top: 1em;
+  object-fit: cover;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
