Sytle main page with mobile styles

--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,8 @@ h1 {
 h2 {
   font-size: 1.333em;
   font-weight: 300;
+  margin: 0 auto;
+  padding: 0;
 }
 
 h3 {
@@ -140,6 +142,10 @@ h4 {
   padding: 0;
 }
 
+section {
+ margin: 60px auto;
+}
+
 .hero,
 .work,
 .about,
@@ -149,15 +155,11 @@ h4 {
   justify-content: center;
   align-items: center;
   min-height: 95vh;
-  margin: 0 auto;
   text-align: center;
 }
 
-.content-wrapper {
-  /*width: 90%;
-  margin: 40px auto;
-  display: flex;*/
-  flex-flow: column wrap;
+.wrapper-container {
+  /*width: 100%;*/
 }
 
 .button {
@@ -168,12 +170,12 @@ h4 {
   font-size: 1em;
   font-weight: 300;
   color: #f9fafc;
-  padding: 0.7em 1.7em;
+  padding: 10px 20px;
 }
 
 img {
-  /*max-width: 100%;
-  height: auto;*/
+  width: 100%;
+  height: auto;
 }
 
 /* === Header - Footer === */
@@ -204,7 +206,8 @@ header #links {
 ul {
   list-style: none;
   padding: 0.5em 0 0 0;
-  margin: 0;
+  margin: 0 auto;
+  text-align: center;
 }
 
 ul li {
@@ -258,8 +261,7 @@ footer .social-icons a {
 /* === Work === */
 article {
   border-radius: 30px;
-  margin: 25px 20px;
-  padding: 5px 10px; 
+  padding: 25px 20px;
 }
 
 span {
@@ -271,37 +273,38 @@ span {
   line-height: 2.5em;
 }
 
-/* === What I do === */
-.what-i-do {
-  width: 96%;
-  margin: 0 auto;
+/* === Skills === */
+.skills {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 95vh;
+  text-align: center;
 }
 
-.featured-skills article {
-  background-color: #ffffff;
-  padding: 50px 30px;
-  max-width: 200px;
+.skills article {
+  background-color: #fcc6c6;
+  padding: 50px 65px;
+  margin: 40px;
+}
+
+.skills article i {
+  font-size: 6em;
 }
 
 /* === Call to action === */
 .call-to-action {
-  max-width: 90%;
-  margin: 0 auto;
+  padding: 0 20px;
 }
 
 .rounded-square-container {
-  max-width: 150vh;
-  min-height: 90vh;
-  margin: 35px auto;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: #4d39d1;
+  min-height: 90vh;
   border-radius: 50px;
+  background-color: #4d39d1;
   color: #f9fafc;
   box-shadow: 6px 9px 23px 0px rgba(117,138,180,0.2);
     -webkit-box-shadow:  6px 9px 23px 0px rgba(117,138,180,0.2);
@@ -309,7 +312,11 @@ span {
 }
 
 .call-to-action .content-wrapper {
-  padding: 10px 20%;
+  padding: 0 45px;
+}
+
+.call-to-action p {
+  font-size: 1.3em;
 }
 
 .call-to-action a {
@@ -318,7 +325,7 @@ span {
 }
 
 .call-to-action h1 {
-  padding-bottom: 1em;
+  padding-bottom: 0.6em;
 }
 
 /* === About === */
@@ -512,7 +519,7 @@ textarea {
     padding: 0 20px;
   }
 
-  /* === What I do === */
+  /* ===  Skill === */
   .featured-skills article {
     max-width: 500px;
     display: flex; 
@@ -522,8 +529,7 @@ textarea {
   }
 
   .featured-skills article img {
-    width: 25%;
-    object-fit: contain;
+
   }
 
   /* === Call to action === */
