--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,6 @@ section {
 }
 
 .hero,
-.work,
 .about,
 .contact,
 .work-detail {
@@ -156,6 +155,14 @@ section {
   align-items: center;
   min-height: 95vh;
   text-align: center;
+}
+
+.work {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 50vh;
 }
 
 .wrapper-container {
@@ -167,8 +174,8 @@ section {
   border-radius: 50px;
   text-align: center;
   text-decoration: none;
-  font-size: 1em;
-  font-weight: 300;
+  font-size: 1.4em;
+  font-weight: 400;
   color: #f9fafc;
   padding: 10px 20px;
   line-height: 65px;
@@ -262,7 +269,7 @@ footer .social-icons a {
 /* === Work === */
 article {
   border-radius: 30px;
-  padding: 25px 20px;
+  padding: 40px 20px 10px 20px;
 }
 
 span {
@@ -279,12 +286,17 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 95vh;
+  min-height: 50vh;
   text-align: center;
+  padding: 70px 0;
+}
+
+.skills .content-wrapper {
+  padding-top: 40px;
 }
 
 .skills article {
-  background-color: #fcc6c6;
+  background-color: #ffffff;
   padding: 40px 30px;
   margin: 40px;
   max-width: 300px;
@@ -310,6 +322,7 @@ span {
   align-items: center;
   text-align: center;
   min-height: 90vh;
+  margin: 0 auto;
   border-radius: 50px;
   background-color: #4d39d1;
   color: #f9fafc;
@@ -323,7 +336,7 @@ span {
 }
 
 .call-to-action p {
-  font-size: 1.3em;
+  font-size: 1.5em;
 }
 
 .call-to-action a {
@@ -507,11 +520,20 @@ textarea {
   }
 
   /* === Work === */
+  .work {
+    max-width: 150vh;
+  }
+
   .work article,
   .skills article {
     display: flex;
     flex-flow: row nowrap;
     text-align: left;
+  }
+
+  #article-b {
+    flex-flow: row-reverse;
+    text-align: right;
   }
 
   .skills article {
@@ -532,6 +554,12 @@ textarea {
   }
 
   /* === Call to action === */
+  .rounded-square-container {
+    max-width: 150vh;
+  }
+  .call-to-action .content-wrapper {
+    max-width: 767px;
+  }
  
 /* ==========================================================================
 	   														DESKTOP STYLES
