--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,6 @@ section {
 }
 
 .hero,
-.contact,
 .work-detail {
   display: flex;
   justify-content: center;
@@ -232,18 +231,18 @@ footer {
   flex-flow: column wrap;
 }
 
-footer .social {
+.social {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-around;
   margin-top: 1.5em;
 }
 
-footer .social-icons {
+.social-icons {
   display: flex;
 }
 
-footer .social-icons p {
+.social-icons p {
   background-color: #fb746c;
   border-radius: 50%;
   width: 40px;
@@ -254,7 +253,7 @@ footer .social-icons p {
   margin: 1em;
 }
 
-footer .social-icons a {
+.social-icons a {
   color: #f9fafc;
 }
 
@@ -350,7 +349,8 @@ span {
   padding: 0 20px;
 }
 
-.about .rounded-square-container {
+.about .rounded-square-container,
+.contact .rounded-square-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -382,11 +382,30 @@ span {
 }
 
 /* === Contact === */
+.contact {
+  padding: 0 20px;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.contact .content-wrapper {
+  display: flex;
+  flex-flow: column;
+}
+
 .info-sub {
   margin: 30px 0 0 0;
 }
 
-.contact-form, .work-detail-text {
+/* === Work detail === */
+.button-container {
+  margin: 30px 0;
+}
+
+.work-detail-text {
   max-width: 90%;
   background-color: #ffffff;
   border-radius: 50px;
@@ -395,28 +414,6 @@ span {
   box-shadow: 6px 9px 23px 0px rgba(117,138,180,0.2);
     -webkit-box-shadow: 6px 9px 23px 0px rgba(117,138,180,0.2);
     -moz-box-shadow: 6px 9px 23px 0px rgba(117,138,180,0.2);   
-}
-
-form {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: column wrap;
-}
-
-input, textarea {
-  padding: 10px 10px;
-  margin: 10px auto;
-  border: none;
-  background-color: #f9fafc;
-}
-
-textarea {
-  height: 60px;
-}
-/* === Work detail === */
-.button-container {
-  margin: 30px 0;
 }
 
 .work-detail p {
@@ -522,7 +519,7 @@ textarea {
 /* ==========================================================================
 	   														TABLET STYLES
 ========================================================================== */
-@media only screen and (min-width: 767px){
+@media only screen and (min-width: 767px) {
   section {
     margin: 0 auto;
   }
@@ -570,16 +567,22 @@ textarea {
   .rounded-square-container {
     max-width: 150vh;
   }
+
   .call-to-action .content-wrapper, {
     max-width: 767px;
   }
 
   /* === About === */
-  .about {
+  .about  {
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0 10%;
+  }
+
+  .about .rounded-square-container {
+    max-width: 900px;
   }
 
   .about-text {
@@ -589,13 +592,19 @@ textarea {
   .about .content-wrapper {  
     display: flex;
     flex-flow: row nowrap;
-    max-width: 767px;
   }
 
-  /*.about .rounded-square-container {
-    margin: 23vh auto;   
-  }*/
- 
+  .contact {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 25%;
+  }
+
+  .contact .rounded-square-container {
+    min-width: 100%;
+  }
 /* ==========================================================================
 	   														DESKTOP STYLES
 ========================================================================== */
