--- a/css/main.css
+++ b/css/main.css
@@ -407,8 +407,8 @@ span {
 }
 
 .work-detail img {
-  width: 80%;
-  max-width: 80vh;
+  /*width: 80%;*/
+  max-width: 90vh;
   margin: 0 auto;
 }
 
@@ -417,7 +417,7 @@ span {
 }
 
 .work-detail-text {
-  max-width: 90%;
+  /*max-width: 90%;*/
   background-color: #ffffff;
   border-radius: 50px;
   padding: 30px;
@@ -544,9 +544,10 @@ span {
 	   														TABLET STYLES
 ========================================================================== */
 @media only screen and (min-width: 767px) {
-  section {
+  /*section {
     margin: 0 auto;
-  }
+  }*/
+
   /* === Footer === */
   footer nav ul {
     display: flex;
@@ -628,7 +629,7 @@ span {
   }
 
   .work-detail {
-    margin: 60px 10%;
+    margin: 60px 6%;
   }
 
   #button-full-width {
@@ -662,7 +663,7 @@ span {
   }
 
   .work-detail {
-    max-width: 80vh;
+    max-width: 120vh;
     margin-left: auto;
     margin-right: auto;
   }
