--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ textarea {
    ========================================================================== */
 /* === General Styles === */
 html {
-  font-size: 15px;
+  font-size: 14px;
 }
 
 body {
@@ -128,7 +128,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.7em;
+  font-size: 1.5em;
   font-weight: 700;
   margin: 0.7em auto;
   padding: 0;
@@ -243,7 +243,7 @@ footer {
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  margin: 1em;
+  margin: 0 1em 1em 1em;
 }
 
 .social-icons a {
@@ -331,7 +331,7 @@ span {
 }
 
 .call-to-action p {
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 
 .call-to-action a {
@@ -351,7 +351,7 @@ span {
 .about .rounded-square-container,
 .contact .rounded-square-container {
   min-height: 1vh;
-  padding: 50px 45px;
+  padding: 50px 30px;
   background-color: #ffffff;
   color: #4d39d1;
 }
@@ -389,7 +389,11 @@ span {
 }
 
 .info-sub {
-  margin: 30px 0 0 0;
+  margin: 1em 0 0 0;
+}
+
+.contact a {
+  font-size: 1.2em;
 }
 
 /* === Work detail === */
@@ -593,6 +597,10 @@ span {
     max-width: 767px;
   }
 
+  .call-to-action p {
+    font-size: 1.5em;
+  }
+
   /* === About === */
   .about {
     min-height: 100vh;
@@ -669,6 +677,10 @@ span {
     max-width: 150vh;
     margin-left: 10%;
     margin-right: 10%;
+  }
+
+  .about-text {
+    font-size: 1.2em;
   }
 
   /* === Work detail === */
