--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,7 @@ body {
 a {
   text-decoration: none;
   color: #4d39d1;
+  transition: all 0.3s;
 }
 
 p {
@@ -176,25 +177,137 @@ img {
 }
 
 /* === Header - Footer === */
-header {
-  float: right;
+/* Menu */
+#menu-content {
+  visibility: hidden;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  top: 0;
+  right: 0;
+  text-align: center;
+  font-size: 2.3em;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
-header a {
-  color: #4d39d1;
-  text-decoration: none;
+.open #menu-content {
+  top: 97px;
+  width: 100%;
+  visibility: visible;
+  z-index: 1000;
 }
 
-header a.icon {
-  position: absolute;
+#menu-content ul {
+  padding: 0;
+}
+
+#menu-content ul li a {
+  color: #fff;
+}
+
+#menu-content ul li {
+  opacity: 0;
+  transform: translateX(50px);
+  overflow: hidden;
+}
+
+.open #menu-content ul li {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all 0.5s;
+  transition-timing-function: cubic-bezier(0.2, 3, 0.4, 1);
+  transition-delay: 0.27s;
+}
+
+.open #menu-content ul li:nth-child(2) {
+  transition-delay: 0.37s;
+}
+
+.open #menu-content ul li:nth-child(3) {
+  transition-delay: 0.47s;
+}
+
+.open #menu-content ul li:nth-child(4) {
+  transition-delay: 0.57s;
+}
+
+#menu-bg {
+  content: "";
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  background-color: #fb746c;
+  position: fixed;
+  top: 14px;
+  right: 9px;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  overflow: hidden;
+}
+
+.open #menu-bg {
+  transform: scale(50, 35);
+  transition: all 1s ease-out;
+}
+
+#menu-toggle {
   display: block;
-  right: 1em;
-  top: 1em;
+  position: fixed;
+  right: 16.5px;
+  top: 19px;
+  width: 15px;
+  height: 20px;
+  cursor: pointer;
+  z-index: 1001;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-/*Hide the links inside the nav menu*/
-header #links {
-  display: none;
+#menu-toggle div {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+#menu-span {
+  height: 2px;
+  width: 100%;
+  padding: 0;
+  background: #fff;
+  zoom: 1;
+  -webkit-transition: 0.35s ease-in-out;
+  transition: 0.35s ease-in-out;
+  margin: 2px 0;
+  line-height: unset;
+}
+
+#menu-span :nth-child(1) {
+  top: 0;
+}
+
+#menu-span :nth-child(2) {
+  top: 8px;
+}
+#menu-span :nth-child(3) {
+  top: 16px;
+}
+
+.open #menu-span:nth-child(1) {
+  transform: translateY(8px) rotate(135deg) scaleX(1.5);
+  height: 4px;
+}
+
+.open #menu-span:nth-child(2) {
+  width: 0;
+}
+
+.open #menu-span:nth-child(3) {
+  transform: translateY(-6px) rotate(45deg) scaleX(1.5);
+  height: 4px;
 }
 
 /*Nav menu links*/
@@ -410,6 +523,8 @@ span {
 
 .button-container {
   margin: 30px 0;
+  transition: all 0.5s;
+  transition-timing-function: cubic-bezier(0.2, 3, 0.4, 1);
 }
 
 .work-detail-text {
@@ -539,12 +654,73 @@ span {
 /* ==========================================================================
 	   														TABLET STYLES
 ========================================================================== */
+@media only screen and (min-width: 600px) {
+  /*-------------------------hover stuff*/
+  /*-------------------------geenral link hover stuff*/
+  .footer-navigation a:hover,
+  .lastly a:hover,
+  .contact a:hover {
+    color: #fb746c;
+  }
+
+  .call-to-action a:hover,
+  .social-icons a:hover {
+    color: #deebfe;
+  }
+
+  /*------------------------- button hover stuff*/
+  .button-container:hover {
+    transform: scale(1.05, 1.05);
+  }
+
+  .button:hover {
+    box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
+    -webkit-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
+    -moz-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
+  }
+
+  /* == Menu == */
+  /*------------------------- menu text hover stuff*/
+  .open #menu-content ul li {
+    margin: 20px 0;
+  }
+
+  .open #menu-content ul li a:hover {
+    transition-delay: 0s;
+    color: #deebfe;
+  }
+
+  .open #menu-content ul li:hover {
+    transform: scale(1.1, 1.1);
+    transition-delay: 0s;
+    color: #deebfe;
+  }
+
+  .open #menu-content ul li:nth-child(2):hover {
+    transition-delay: 0s;
+  }
+
+  .open #menu-content ul li:nth-child(3):hover {
+    transition-delay: 0s;
+  }
+
+  .open #menu-content ul li:nth-child(4):hover {
+    transition-delay: 0s;
+  }
+  /*---------------------------hover stuff ends*/
+
+  .open #menu-content {
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+  }
+
+  .open #menu-bg {
+    transform: scale(150);
+  }
+}
 
 @media only screen and (min-width: 767px) {
-  /*section {
-    margin: 0 auto;
-  }*/
-
   /* === Footer === */
   footer nav ul {
     display: flex;
