--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,12 @@ body {
   padding: 0;
 }
 
+main {
+  display: block;
+  overflow: hidden;
+  position: relative;
+}
+
 a {
   text-decoration: none;
   color: #4d39d1;
@@ -197,7 +203,7 @@ img {
   top: 97px;
   width: 100%;
   visibility: visible;
-  z-index: 1000;
+  z-index: 1001;
 }
 
 #menu-content ul {
@@ -248,6 +254,7 @@ img {
   -webkit-transform: scale(1);
   transform: scale(1);
   overflow: hidden;
+  z-index: 1000;
 }
 
 .open #menu-bg {
@@ -263,7 +270,7 @@ img {
   width: 15px;
   height: 20px;
   cursor: pointer;
-  z-index: 1001;
+  z-index: 1002;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
@@ -367,9 +374,12 @@ footer {
 .hero {
   display: flex;
   justify-content: center;
+  flex-flow: column wrap;
   align-items: center;
   text-align: center;
   min-height: 95vh;
+  overflow: hidden;
+  position: relative;
 }
 
 .hero h2 {
@@ -655,6 +665,69 @@ span {
 	   														TABLET STYLES
 ========================================================================== */
 @media only screen and (min-width: 600px) {
+  /*------------------ svg stuff*/
+  .hero .content-wrapper {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .svg-lt,
+  .svg-lm,
+  .svg-lb,
+  .svg-rt,
+  .svg-rm,
+  .svg-rb {
+    position: absolute;
+    z-index: -10;
+    /* min-width: 30%; */
+    max-width: 40%;
+  }
+
+  .svg-lt {
+    left: -13%;
+    top: -1%;
+    right: auto;
+    bottom: auto;
+    filter: drop-shadow(15px 10px 0px #f3f3f3);
+  }
+
+  .svg-lm {
+    left: -11%;
+    top: 5%;
+    right: auto;
+    bottom: auto;
+  }
+
+  .svg-lb {
+    left: -12%;
+    top: 13%;
+    right: auto;
+    bottom: auto;
+    filter: drop-shadow(20px 10px 0px #f3f3f3);
+  }
+
+  .svg-rt {
+    left: auto;
+    top: -1%;
+    right: -13%;
+    bottom: auto;
+  }
+
+  .svg-rm {
+    left: auto;
+    top: 5%;
+    right: -10%;
+    bottom: auto;
+  }
+
+  .svg-rb {
+    left: auto;
+    top: 14%;
+    right: -8%;
+    bottom: auto;
+    filter: drop-shadow(-6px 41px 0px #f3f3f3);
+  }
+
   /*-------------------------hover stuff*/
   /*-------------------------geenral link hover stuff*/
   .footer-navigation a:hover,
